--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue": "^3.0.0",
     "vue-axios": "^3.3.7",
     "vue-router": "^3.5.2",
+    "vuejs-progress-bar": "^1.2.7",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
