--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "dependencies": {
     "axios": "^0.21.4",
     "bootstrap": "^5.1.1",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
-    "vue": "^3.0.0",
+    "es6-promise": "^4.2.8",
+    "vue": "^3.2.15",
     "vue-axios": "^3.3.7",
     "vue-router": "^3.5.2",
-    "vuex": "^3.6.2"
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
