--- a/package.json
+++ b/package.json
@@ -8,18 +8,26 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^1.2.35",
-    "@fortawesome/free-solid-svg-icons": "^5.15.3",
-    "@fortawesome/vue-fontawesome": "^3.0.0-3",
-    "axios": "^0.21.1",
-    "bootstrap": "^4.6.0",
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "@fortawesome/fontawesome-svg-core": "^1.2.36",
+    "@fortawesome/free-brands-svg-icons": "^5.15.4",
+    "@fortawesome/free-regular-svg-icons": "^5.15.4",
+    "@fortawesome/free-solid-svg-icons": "^5.15.4",
+    "@fortawesome/vue-fontawesome": "^3.0.0-4",
+    "@popperjs/core": "^2.10.1",
+    "axios": "^0.21.4",
+    "bootstrap": "^5.1.1",
+    "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
     "popper.js": "^1.16.1",
     "vee-validate": "^4.3.5",
-    "vue": "^3.0.0",
+    "vue": "^3.2.15",
+    "vue-axios": "^3.3.7",
+    "vue3-circle-progress": "^1.0.6",
+    "vuejs-progress-bar": "^1.2.7",
     "vue-router": "^4.0.6",
-    "vuex": "^4.0.0",
+    "vuex": "^4.0.2",
     "yup": "^0.32.9"
   },
   "devDependencies": {
