--- a/package.json
+++ b/package.json
@@ -20,13 +20,14 @@
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
     "jquery": "^3.6.0",
+    "moment": "^2.29.1",
     "popper.js": "^1.16.1",
     "vee-validate": "^4.3.5",
     "vue": "^3.2.15",
     "vue-axios": "^3.3.7",
+    "vue-router": "^4.0.6",
     "vue3-circle-progress": "^1.0.6",
     "vuejs-progress-bar": "^1.2.7",
-    "vue-router": "^4.0.6",
     "vuex": "^4.0.2",
     "yup": "^0.32.9"
   },
